--- a/web/index.html
+++ b/web/index.html
@@ -7,8 +7,11 @@ and open the template in the editor.
     <head>
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="populate" content="/blog" />
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+        <script type="text/javascript" src="/js/populate.js"></script>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div id="content">Loading...</div>
     </body>
 </html>
