--- a/web/index.html
+++ b/web/index.html
@@ -1,19 +1,78 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
+
 <!DOCTYPE html>
 <html>
     <head>
+		<link rel="stylesheet" type="text/css" href="css/blog.css">
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="blog" content="/blog"/>
-        <meta name="calendar" content="/blog?calendar=true"/>
+        <meta name="populate" content="/blog" />
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script type="text/javascript" src="/js/populate.js"></script>
+
     </head>
     <body>
-        <div id="calendar">Loading...</div>
-        <div id="blog">Loading...</div>
+	
+		
+<div id="page">
+	<div id="header">
+		
+		pikkuriikisen google mainoksen paikka
+		<h1>
+			SailFarAway
+		</h1>
+		
+	</div>
+	<div id="navigation">
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Contact us</a></li>
+		</ul>
+	</div>
+	<div id="content">
+		<div id="leftside">
+			<p>Tähän voisi ehkä tulla mainos. Tai sitten oikea ja vasen reuna vaihtavat paikkoja. Ei kai tuon arkiston ole pakko tuolla oikealla olla.</p>
+		
+		</div>
+		<div id="blog">
+			<h2>
+				Superblog by SuperJonna
+			</h2>
+			<p>
+				Tralla lalla laa..
+			</p>
+			
+		</div>
+		<div id="rightside">
+			<div id="calendar">
+				<h2>Kalenteri</h2>
+				2012<br>
+				November<br>
+				December<br>
+				November<br>
+				December<br>
+				November<br>
+				December<br>
+				November<br>
+				December<br>
+				November<br>
+				December<br>
+				
+			</div>
+			<div id="topics">
+				<h2>Topics</h2>
+				Before sailing away<br>
+				Fixing the boat<br>
+				General travel<br>
+				Sailing<br>
+			</div>
+			
+		</div>
+		
+	</div>
+	<div id="footer">
+			Copyright © SailFarAway.net, 2012
+		</div>
+</div>
     </body>
 </html>
