--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,8 @@
 		<link rel="stylesheet" type="text/css" href="css/blog.css">
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="populate" content="/blog" />
+        <meta name="blog" content="/blog"/>
+        <meta name="calendar" content="/blog?calendar=true"/>
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script type="text/javascript" src="/js/populate.js"></script>
 
