--- a/web/index.html
+++ b/web/index.html
@@ -32,16 +32,33 @@
 	</div>
 	<div id="content">
 		<div id="leftside">
-			<p>Tähän voisi ehkä tulla mainos. Tai sitten oikea ja vasen reuna vaihtavat paikkoja. Ei kai tuon arkiston ole pakko tuolla oikealla olla.</p>
+			<script type="text/javascript"><!--
+google_ad_client = "ca-pub-8272107041521885";
+/* 120 x 600 */
+google_ad_slot = "6953372635";
+google_ad_width = 120;
+google_ad_height = 600;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 		
 		</div>
 		<div id="blog">
-			<h2>
-				Superblog by SuperJonna
-			</h2>
-			<p>
-				Tralla lalla laa..
-			</p>
+			<div class="subject">
+				Superblog by SuperJonna (Vaikka tämä onkin vielä hieman roskaa)
+			</div>
+			<div class="date">
+				9.12.2012
+			</div>
+			<div class="sender">
+				Jonna
+			</div>
+			<div class="body">
+				Jotain tähän nyt pitäisi kirjoittaa. Ihan mitä vaan mitä mieleen tulee ja näppäimistölä irtoaa. Aina sitä näköjään jotain roskaa pystyy ihan näin vauhdissa kirjoittamaan.
+			</div>
+                    
 			
 		</div>
 		<div id="rightside">
