--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@ google_ad_height = 15;
 <script type="text/javascript"
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
-            
+<br>
                 <h1>
 			Sail Far Away
 		</h1>
@@ -108,7 +108,9 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 		
 	</div>
 	<div id="footer">
-			Copyright © SailFarAway.net, 2012
+            <center>
+			Copyright © SailFarAway.net, 2012 - Powered by Adventurer's Blog
+                        </center>
 		</div>
 </div>
     </body>
