--- a/web/sailfaraway/index.html
+++ b/web/sailfaraway/index.html
@@ -34,7 +34,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 <br>
                 <h1>
-			Adventurer's Blog
+			Sail Far Away
 		</h1>
             </center>
             </div>
