--- a/web/pageeditor/index.html
+++ b/web/pageeditor/index.html
@@ -20,7 +20,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-        <script src="/js/pageeditor.js"></script>
+        <script src="/pageeditor/pageeditor.js"></script>
     </head>
     <body>
         <div>
@@ -28,14 +28,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <span>
                     <input id="path" type="text" name="path" size="100"/>
                     <button id="get" name="get" value="get">Get</button>
+                    <button id="put" name="put" value="put">Put</button>
                 </span>
             </div>
             <div>
-                <textarea id="page" name="page" rows="30" cols="100" >
+                <textarea id="page" name="page" rows="60" cols="100" >
                 </textarea>
-            </div>
-            <div>
-                <button id="put" name="put" value="put">Put</button>
             </div>
         </div>
     </body>
