--- a/web/admin/basesettings.html
+++ b/web/admin/basesettings.html
@@ -19,7 +19,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <head>
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="context" content="/admin/settings/blogger">
+        <meta name="context" content="/admin/settings/base">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script src="/admin/entity.js"></script>
     </head>
