--- a/web/admin/basesettings.html
+++ b/web/admin/basesettings.html
@@ -19,12 +19,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <head>
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="context" content="/admin/settings/base">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script src="/admin/entity.js"></script>
     </head>
     <body>
-        <form action="/admin/settings" method="post">
+        <form action="/admin/settings/base" method="post">
             <div id="fields"></div>
             <div><input type="submit" value="Submit"/></div>
         </form>
