--- a/web/admin/index.html
+++ b/web/admin/index.html
@@ -32,28 +32,37 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <body>
         <div id="tabs">
             <ul>
-                <li><a href="#tabs-1">Pages</a></li>
-                <li><a href="#tabs-2">Blogger Settings</a></li>
-                <li><a href="#tabs-3">Base Settings</a></li>
+                <li><a href="#tabs-1">Blogs</a></li>
+                <li><a href="#tabs-2">Pages</a></li>
+                <li><a href="#tabs-3">Blogger Settings</a></li>
+                <li><a href="#tabs-4">Base Settings</a></li>
             </ul>
             <div id="tabs-1">
-                <form action="/admin/settings/page" method="post">
-                    <div><button class="new">New Page</button><input type="submit" value="Submit"/></div>
+                <form action="/admin/settings/blog" method="post">
+                    <div><button class="new">New Blog</button><button class="delete">Delete Blog</button><button class="submit">Submit</button></div>
                     <div class="select"></div>
                     <div class="fields"></div>
-                    <div><input type="submit" value="Submit"/></div>
+                    <div><button class="submit">Submit</button></div>
                 </form>
             </div>
             <div id="tabs-2">
-                <form action="/admin/settings/blogger" method="post">
+                <form action="/admin/settings/page" method="post">
+                    <div><button class="new">New Page</button><button class="delete">Delete Page</button><button class="submit">Submit</button></div>
+                    <div class="select"></div>
                     <div class="fields"></div>
-                    <div><input type="submit" value="Submit"/></div>
+                    <div><button class="submit">Submit</button></div>
                 </form>
             </div>
             <div id="tabs-3">
+                <form action="/admin/settings/blogger" method="post">
+                    <div class="fields"></div>
+                    <div><button class="submit">Submit</button></div>
+                </form>
+            </div>
+            <div id="tabs-4">
                 <form action="/admin/settings/base" method="post">
                     <div class="fields"></div>
-                    <div><input type="submit" value="Submit"/></div>
+                    <div><button class="submit">Submit</button></div>
                 </form>
             </div>
         </div>    
