--- a/web/admin/index.html
+++ b/web/admin/index.html
@@ -65,6 +65,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                     <div><button class="submit">Submit</button></div>
                 </form>
             </div>
-        </div>    
+        </div>
+        <small>To force settings into a namespace add namespace parameter to request!</small>
     </body>
 </html>
