--- a/web/admin/index.html
+++ b/web/admin/index.html
@@ -34,8 +34,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             <ul>
                 <li><a href="#tabs-1">Blogs</a></li>
                 <li><a href="#tabs-2">Pages</a></li>
-                <li><a href="#tabs-3">Blogger Settings</a></li>
-                <li><a href="#tabs-4">Base Settings</a></li>
+                <li><a href="#tabs-3">Files</a></li>
+                <li><a href="#tabs-4">Blogger Settings</a></li>
+                <li><a href="#tabs-5">Base Settings</a></li>
             </ul>
             <div id="tabs-1">
                 <form action="/admin/settings/blog" method="post">
@@ -54,12 +55,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 </form>
             </div>
             <div id="tabs-3">
+                <a href="/admin/settings/fileupload">Upload file</a>
+            </div>
+            <div id="tabs-4">
                 <form action="/admin/settings/blogger" method="post">
                     <div class="fields"></div>
                     <div><button class="submit">Submit</button></div>
                 </form>
             </div>
-            <div id="tabs-4">
+            <div id="tabs-5">
                 <form action="/admin/settings/base" method="post">
                     <div class="fields"></div>
                     <div><button class="submit">Submit</button></div>
