Added CommonSettings and ColorType etc

--- a/web/admin/index.html
+++ b/web/admin/index.html
@@ -35,8 +35,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <li><a href="#tabs-1">Blogs</a></li>
                 <li><a href="#tabs-2">Pages</a></li>
                 <li><a href="#tabs-3">Files</a></li>
-                <li><a href="#tabs-4">Blogger Settings</a></li>
-                <li><a href="#tabs-5">Base Settings</a></li>
+                <li><a href="#tabs-4">Base Settings</a></li>
+                <li><a href="#tabs-5">Common Settings</a></li>
             </ul>
             <div id="tabs-1">
                 <form action="/admin/settings/blog" method="post">
@@ -58,13 +58,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <a href="/admin/settings/fileupload">Upload file</a>
             </div>
             <div id="tabs-4">
-                <form action="/admin/settings/blogger" method="post">
+                <form action="/admin/settings/base" method="post">
                     <div class="fields"></div>
                     <div><button class="submit">Submit</button></div>
                 </form>
             </div>
             <div id="tabs-5">
-                <form action="/admin/settings/base" method="post">
+                <form action="/admin/settings/common" method="post">
                     <div class="fields"></div>
                     <div><button class="submit">Submit</button></div>
                 </form>
