--- a/web/admin/index.html
+++ b/web/admin/index.html
@@ -20,7 +20,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css"/>
-        <link rel="stylesheet" href="./admin.css"/>
+        <link rel="stylesheet" type="text/css" href="http://www.kauaspois.fi/admin/admin.css"/>
         <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
         <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
         <script src="/admin/entity.js"></script>
@@ -31,6 +31,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         </script>
     </head>
     <body>
+        <p>Juupajuu</p>
         <div id="tabs">
             <ul>
                 <li><a href="#tabs-1">Blogs</a></li>
