--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,6 +14,7 @@
         <script src="http://code.jquery.com/jquery-1.11.2.js"></script>
         <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
         <script src="/js/populate.js"></script>
+        <script src="/js/googlemaps.js"></script>
         <script>
             $(function () {
                 $("#tabs").tabs();
