Add opacity feature

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
     <head class="openGraph">
         <style type="text/css">
-            #map-canvas { height: 200px; margin: 0; padding: 0;}
+            .map-canvas { height: 200px; margin: 0; padding: 0;}
         </style>
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0 Feed" href="/rss" />
         <link rel="stylesheet" type="text/css" href="css/blog.css">
@@ -114,7 +114,7 @@
 
                             </div>
                             <br>
-                            <div id='map-canvas'></div>
+                            <div class='map-canvas'></div>
                             <div>
                                 <a href="/kml"><div title="Avaa Google earth ohjelman (jos se on asennettu) ja näyttää uusimman sijainnin">Viimeisin sijainti</div><div class="lastPosition"></div></a>
                             </div>
