Add resources feature

--- a/src/main/webapp/admin/index.html
+++ b/src/main/webapp/admin/index.html
@@ -31,7 +31,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         </script>
     </head>
     <body>
-        <p>Juupajuu</p>
         <div id="tabs">
             <ul>
                 <li><a href="#tabs-1">Blogs</a></li>
@@ -40,6 +39,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <li><a href="#tabs-4">Templates</a></li>
                 <li><a href="#tabs-5">Base</a></li>
                 <li><a href="#tabs-6">Common</a></li>
+                <li><a href="#tabs-7">Resource</a></li>
             </ul>
             <div id="tabs-1">
                 <form action="/admin/settings/blog" method="post">
@@ -74,6 +74,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             </div>
             <div id="tabs-6">
                 <form action="/admin/settings/common" method="post">
+                    <div class="fields"></div>
+                    <div><button class="submit">Submit</button></div>
+                </form>
+            </div>
+            <div id="tabs-7">
+                <form action="/admin/settings/resource" method="post">
                     <div class="fields"></div>
                     <div><button class="submit">Submit</button></div>
                 </form>
