--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0 Feed" href="/rss" />
         <link rel="stylesheet" type="text/css" href="css/blog.css">
         <link rel="stylesheet" type="text/css" href="css/tabs.css">
-        <title>S/Y Iiris</title>
+        <title class="string" id="title">S/Y Iiris</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <script src="http://code.jquery.com/jquery-1.11.2.js"></script>
         <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
