--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,14 +2,14 @@
 <html>
     <head class="openGraph">
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0 Feed" href="/rss" />
-        <link rel="stylesheet" type="text/css" href="css/blog.css">
-        <link rel="stylesheet" type="text/css" href="css/tabs.css">
-        <title class="string" id="title">S/Y Iiris</title>
+        <link rel="stylesheet" type="text/css" href="/freezed/1.0.5/css/blog.css">
+        <link rel="stylesheet" type="text/css" href="/freezed/1.0.5/css/tabs.css">
+        <title class="string" id="title"></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <script src="http://code.jquery.com/jquery-1.11.2.js"></script>
         <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-        <script src="/js/populate.js"></script>
-        <script src="/js/googlemaps.js"></script>
+        <script src="/freezed/1.0.5/js/populate.js"></script>
+        <script src="/freezed/1.0.5/js/googlemaps.js"></script>
         <script>
             $(function () {
                 $("#tabs").tabs();
