--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
     <head class="openGraph">
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0 Feed" href="/rss" />
-        <link rel="stylesheet" type="text/css" href="/freezed/1.0.5/css/blog.css">
+        <link rel="stylesheet" type="text/css" href="/css/blog.css">
         <link rel="stylesheet" type="text/css" href="/freezed/1.0.5/css/tabs.css">
         <title class="string" id="title"></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
