Add google earth icon

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -89,6 +89,7 @@
                             </div>
                             <br>
                             <div>
+                                <a href="/kml"><img src="images/Google-Earth-32.png">Google Earth</a>
                                 <a href="/kml"><div class="string" id="gearth-title" title="Avaa Google earth ohjelman (jos se on asennettu) ja näyttää uusimman sijainnin">
                                         <span class="string" id="last-position">Viimeisin sijainti</span>
                                     </div>
