--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -88,7 +88,7 @@
                 </ul>
                 <div id="tabs-1">
                     <div id="leftside">
-                        <div id="map" class='map-canvas'></div>
+                        <!-- <div id="map" class='map-canvas'></div> -->
                         <div id="navigation">
                             <div>
                                 <label>
